Fix portfolio item header
It got too wide…

--- a/_sass/portfolio/header.sass
+++ b/_sass/portfolio/header.sass
@@ -7,7 +7,9 @@ header
     font-size: 2rem
     font-weight: 500
     text-align: center
-    margin: $vertical-spacer-small 0
+    padding: $vertical-spacer-small $side-spacing-small
+    max-width: $max-width
+    margin: 0 auto
 
   .wrapper
     padding: $vertical-spacer-small 0
@@ -85,7 +87,8 @@ header
 
     >h1
       font-size: 3rem
-      margin: $vertical-spacer 0
+      padding: $vertical-spacer $side-spacing
+      margin: 0 auto
 
     .wrapper
       padding: $vertical-spacer 0
